[package]
name = "CAA_encrypted_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shamir = "2.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.89"
aes-gcm = "0.10.1"
base64 = "0.20.0"
dryoc = "0.4.2"
rpassword = "7.2.0"